--- a/SZGYA13C_Bevolkerung/MainWindow.xaml
+++ b/SZGYA13C_Bevolkerung/MainWindow.xaml
@@ -7,6 +7,6 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
-
+        <Label x:Name="lb" Content="" VerticalAlignment="Center" HorizontalAlignment="Center" />
     </Grid>
 </Window>
