--- a/SZGYA13C_Bevolkerung/MainWindow.xaml
+++ b/SZGYA13C_Bevolkerung/MainWindow.xaml
@@ -7,6 +7,7 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
-        <Label x:Name="lb" Content="" VerticalAlignment="Center" HorizontalAlignment="Center" />
+        <Label x:Name="lb1" Content="" VerticalAlignment="Center" HorizontalAlignment="Center" />
+        <Label x:Name="lb2" Content="" VerticalAlignment="Top" HorizontalAlignment="Center" Margin="0,235,0,0" />
     </Grid>
 </Window>
