--- a/SZGYA13C_Bevolkerung/MainWindow.xaml
+++ b/SZGYA13C_Bevolkerung/MainWindow.xaml
@@ -5,9 +5,24 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:SZGYA13C_Bevolkerung"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="MainWindow" Height="750" Width="1300">
     <Grid>
-        <Label x:Name="lb1" Content="" VerticalAlignment="Center" HorizontalAlignment="Center" />
-        <Label x:Name="lb2" Content="" VerticalAlignment="Top" HorizontalAlignment="Center" Margin="0,235,0,0" />
+        <ComboBox x:Name="ComboBoxFeladatok" HorizontalAlignment="Left" VerticalAlignment="Top" Width="120" Margin="10,10,0,0"/>
+        <Label x:Name="Megoldas" Content="Feladat egy mondatos megoldása:" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="10,50,0,0"/>
+        <Label x:Name="MegoldasMondatos" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="200,50,0,0"/>
+
+        <DataGrid x:Name="MegoldasTeljes" Height="310" Width="Auto" AutoGenerateColumns="False" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="10,100,0,0">
+            <DataGrid.Columns>
+                <DataGridTextColumn Header="Id" Binding="{Binding Id}" />
+                <DataGridTextColumn Header="Név" Binding="{Binding Nev}" />
+                <DataGridTextColumn Header="Születési dátum" Binding="{Binding SzuletesiDatum}" />
+                <DataGridTextColumn Header="Nemzetiség" Binding="{Binding Nemzetiseg}" />
+                <DataGridTextColumn Header="Népcsoport" Binding="{Binding Nepcsoport}" />
+                <DataGridTextColumn Header="Tartomány" Binding="{Binding Tartomany}" />
+                <DataGridTextColumn Header="Nettó jövedelem" Binding="{Binding NettoJovedelem}" />
+            </DataGrid.Columns>
+        </DataGrid>
+
+        <ListBox x:Name="MegoldasLista" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="10,420,0,0" Width="400" Height="200"/>
     </Grid>
 </Window>
