--- a/SZGYA13C_Bevolkerung/MainWindow.xaml
+++ b/SZGYA13C_Bevolkerung/MainWindow.xaml
@@ -8,7 +8,7 @@
         Title="MainWindow" Height="750" Width="1300">
     <Grid>
         <ComboBox Name="ComboBoxFeladatok" SelectionChanged="ComboBoxFeladatok_SelectionChanged" HorizontalAlignment="Left" VerticalAlignment="Top" Width="120" Margin="50,50,0,0"/>
-        <Label Name="MegoldasMondatos" HorizontalAlignment="Left" VerticalAlignment="Top" Width="400" Margin="210,56,0,0"/>
+        <Label Name="MegoldasMondatos" HorizontalAlignment="Left" VerticalAlignment="Top" Width="400" Height="63" Margin="210,29,0,0"/>
 
         <DataGrid x:Name="MegoldasTeljes" Height="310" Width="Auto" AutoGenerateColumns="False" HorizontalAlignment="Stretch" VerticalAlignment="Top" Margin="0,100,0,0">
             <DataGrid.Columns>
